fix : 리뷰사항 수정